# fireblocks-sdk-rs

./: .#Cargo.toml  Cargo.toml  Makefile
.github/workflows/: check.yml  release-candidate.yml  release.yml  safety.yml  test.yml
docs/: AbaPaymentInfo.md  AbiFunction.md  AccessType.md  AccountAccess.md  AccountBase.md  AccountBasedAccessProvider.md  AccountConfigV2.md  AccountHolderDetails.md  AccountIdentifierV2.md  AccountProviderId.md  AccountReference.md  AccountTypeV2.md  AchAccountType.md  AchAddress.md  AchDestination.md  AchPaymentInfo.md  AddAssetToExternalWalletRequest.md  AddCosignerRequest.md  AddCosignerResponse.md  AdditionalInfoRequest.md  AdditionalInfoRequestAdditionalInfo.md  AmlScreeningResult.md  AmlVerdictManualRequest.md  AmlVerdictManualResponse.md  AmountOverTimeConfigV2.md  AmountOverTimeConfigV2Range.md  AmountRangeV2.md  ApiKey.md  ApprovalRequest.md  ApprovalRequestsApi.md  ApproversConfigV2.md  ApproversConfigV2ApprovalGroupsInner.md  AssetConfigV2.md  AssetDetailsMetadata.md  AssetFeature.md  AssetMetadata.md  AssetMetadataRequest.md  AssetNote.md  AssetNoteRequest.md  AssetPriceResponse.md  (+334 more)
generator/: config.yaml
generator/templates/custom/models/: asset_type_response.rs  authorization_groups.rs  chain_descriptor.rs  signed_message_signature.rs  transaction_status.rs
src/: lib.rs  transaction_status.rs
src/apis/: approval_requests_api.rs  blockchains_assets_api.rs  compliance_api.rs  connected_accounts_beta_api.rs  contract_interactions_api.rs  contract_templates_api.rs  d_app_connections_api.rs  deployed_contracts_api.rs  exchange_accounts_api.rs  fiat_accounts_api.rs  fireblocks_network_api.rs  gas_station_api.rs  job_management_api.rs  key_link_api.rs  keys_beta_api.rs  mod.rs  nfts_api.rs  off_exchange_api.rs  payments_payout_api.rs  policy_editor_beta_api.rs  policy_editor_v2_beta_api.rs  smart_transfers_api.rs  staking_api.rs  tags_api.rs  tokenization_api.rs  trading_beta_api.rs  transactions_api.rs  vaults_api.rs  webhooks_api.rs  webhooks_v2_api.rs  whitelisted_contracts_api.rs  whitelisted_external_wallets_api.rs  whitelisted_internal_wallets_api.rs  workspace_management_api.rs
src/client/: poll.rs  transfer.rs  whitelist.rs
src/models/: aba_payment_info.rs  access_type.rs  account_access.rs  account_base.rs  account_based_access_provider.rs  account_config_v2.rs  account_holder_details.rs  account_identifier_v2.rs  account_provider_id.rs  account_reference.rs  account_type_v2.rs  ach_account_type.rs  ach_address.rs  ach_destination.rs  ach_payment_info.rs  add_asset_to_external_wallet_request.rs  additional_info.rs  additional_info_request.rs  additional_info_request_additional_info.rs  aml_verdict_manual_request.rs  aml_verdict_manual_response.rs  amount_over_time_config_v2.rs  amount_over_time_config_v2_range.rs  amount_range_v2.rs  approval_request.rs  approvers_config_v2.rs  approvers_config_v2_approval_groups_inner.rs  asset_config_v2.rs  asset_details_metadata.rs  asset_feature.rs  asset_metadata_request.rs  asset_note.rs  asset_note_request.rs  asset_types_config_v2_inner.rs  base_provider.rs  basic_address_request.rs  blockchain_transfer.rs  bps_fee.rs  business_identification.rs  capability.rs  (+199 more)
tests/: paged_client.rs  setup.rs  transfers.rs  wallet_connect.rs
