[package]
name = "fireblocks-sdk"
resolver = "2"
version = "2025.10.17"
authors = ["gh@cartera-mesh.com"]
description = "Rust implementation of the Fireblocks SDK"
readme = "README.md"
repository = "https://github.com/CarteraMesh/fireblocks-sdk-rs"
homepage = "https://github.com/CarteraMesh/fireblocks-sdk-rs"
documentation = "https://docs.rs/fireblocks-sdk"
license = "MIT"
keywords = ["fireblocks", "blockchain", "bitcoin", "solana"]
categories = ["cryptography::cryptocurrencies"]
edition = "2024"

[lib]
name = "fireblocks_sdk"
path = "src/lib.rs"

[features]
default = ["page", "bon"]
rustls-tls = ["reqwest/rustls-tls"]
bon = []
page = []

[dependencies]
anyhow = "1"
async-trait = "^0.1"
bon = { version = "3" }
chrono = { version = "0.4", default-features = true, features = ["serde"] }
futures = { version = "0.3" }
http = { version = "1" }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
rand = { version = "0.9" }
reqwest = { version = "^0.12", features = ["json", "multipart"] }
reqwest-middleware = { version = "^0.4", features = ["json", "multipart"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros", "json"] }
sha2 = { version = "0.10" }
thiserror = "^2"
tokio = { version = "1", default-features = false, features = ["time"] }
tracing = { version = "0.1" }
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }

[dev-dependencies]
dotenvy = { version = "0.15" }
lazy_static = "1.4.0"
rstest = "0.26.1"
tokio = { version = "1", features = [ "full"] }
tokio-stream = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "serde"] }

[lints.rust]
unsafe_code = "forbid"
unused_imports = "allow"
non_snake_case = "allow"

[lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"
module_name_repetitions = "allow"
future_not_send = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
missing_errors_doc = "allow"
option_if_let_else = "warn"
nursery = { level = "deny", priority = -1 }
doc_markdown = "allow"

[[test]]
name = "vaults_api"

[[test]]
name = "paged_client"

[[test]]
name = "supported_assets"

[[test]]
name = "transactions_api"

[[test]]
name = "wallet_connect"

[[test]]
name = "staking"

[[test]]
name = "wallets"

[[test]]
name = "transfers"

