[package]
name = "fireblocks-sdk"
version = "2026.3.28"
edition = "2024"
description = "Rust implementation of the Fireblocks SDK"
documentation = "https://docs.rs/fireblocks-sdk"
readme = "README.md"
homepage = "https://github.com/CarteraMesh/fireblocks-sdk-rs"
repository = "https://github.com/CarteraMesh/fireblocks-sdk-rs"
license = "MIT"
keywords = ["bitcoin", "blockchain", "fireblocks", "solana"]
categories = ["cryptography::cryptocurrencies"]
resolver = "2"

[lib]
name = "fireblocks_sdk"
path = "src/lib.rs"

[[test]]
name = "vaults_api"

[[test]]
name = "paged_client"

[[test]]
name = "supported_assets"

[[test]]
name = "transactions_api"

[[test]]
name = "wallet_connect"

[[test]]
name = "staking"

[[test]]
name = "wallets"

[[test]]
name = "transfers"

[dependencies]
anyhow = "1"
async-trait = "^0.1"
bon = { version = "3" }
chrono = { version = "0.4", default-features = true, features = ["serde"] }
futures = { version = "0.3" }
http = { version = "1" }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
rand = { version = "0.9" }
reqwest = { version = "^0.12", features = ["json", "multipart"] }
reqwest-middleware = { version = "^0.4", features = ["json", "multipart"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_with = { version = "^3.8", default-features = false, features = [
  "base64",
  "json",
  "macros",
  "std"
] }
sha2 = { version = "0.11" }
thiserror = "^2"
tokio = { version = "1", default-features = false, features = ["time"] }
tracing = { version = "0.1" }
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }

[dev-dependencies]
dotenvy = { version = "0.15" }
lazy_static = "1.4.0"
rstest = "0.25.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "serde"] }

[features]
default = ["bon", "page"]
bon = []
page = []
rustls-tls = ["reqwest/rustls-tls"]

[lints.rust]
non_snake_case = "allow"
unsafe_code = "forbid"
unused_imports = "allow"

[lints.clippy]
doc_markdown = "allow"
enum_glob_use = "deny"
future_not_send = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
nursery = { level = "deny", priority = -1 }
option_if_let_else = "warn"
pedantic = { level = "deny", priority = -1 }
return_self_not_must_use = "allow"
unwrap_used = "deny"
